--- a/src/css/default.css
+++ b/src/css/default.css
@@ -15,6 +15,8 @@ html {
 
 :root {
     --color-main: #004F68;
+    --color-main-darker: #003b4d;
+    --color-main-lighter: #006280;
     --color-accent: #E4EAF0;
     --color-success: #4BB543;
     --color-error:#ff3333;
