working on supervisor dashboard

--- a/src/css/default.css
+++ b/src/css/default.css
@@ -17,6 +17,7 @@ html {
     --color-main: #004F68;
     --color-main-darker: #003b4d;
     --color-main-lighter: #006280;
+    --color-secondary: #009ccc;
     --color-accent: #E4EAF0;
     --color-success: #4BB543;
     --color-error:#ff3333;
