--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -13,19 +13,18 @@ h1, h2 {
     color: var(--color-main);
 }
 
-.wrapper__sign-out {
+/* .wrapper__sign-out {
     padding-top: 0.6em;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-}
+} */
 
 .container__dashboard {
     width: 100%;
     display: flex;
     flex-direction: column;
     margin: 1rem 0;
-    
     gap: 1rem;
 }
 
