edit some stuffs

--- a/src/css/project.css
+++ b/src/css/project.css
@@ -132,6 +132,10 @@
     cursor: pointer;
 }
 
+/* ///////////////////////// */
+/* /// Student My Project //*/
+/* //////////////////////// */
+
 .form__my-project {
     padding: 1rem;
 }
