--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -37,5 +37,11 @@ h1, h2 {
 }
 
 .card__title {
+    color: #fff;
     text-align: center;
+    padding: 0.5em;
+    font-weight: bold;
+    background-color: var(--color-main-lighter);
+    font-size: 1.2em;
+    border-radius: 10px;
 }
