--- a/src/css/default.css
+++ b/src/css/default.css
@@ -26,6 +26,7 @@ html {
     --color-accepted-bg: #EFFBF7;
     --color-rejected: #B23B3B;
     --color-rejected-bg: #FCDDEC;
+    --color-bright: #fff;
 }
 
 body {
