--- a/src/css/supervisor_meeting.css
+++ b/src/css/supervisor_meeting.css
@@ -25,7 +25,7 @@
 
 .button {
     color: var(--color-main);
-    background-color: #fff;
+    background-color: var(--color-bright);
     padding: 0.9em 1.2em;
     outline: none;
     border-radius: 30px;
@@ -40,13 +40,13 @@
 }
 
 .button-add {
-    color: #fff;
+    color: var(--color-bright);
     background-color: var(--color-main);
 }
 
 .button:hover {
     background-color: var(--color-main-lighter);
-    color: #fff;
+    color: var(--color-bright);
 }
 
 .button:active {
@@ -70,7 +70,7 @@
 .card {
     width: 100%;
     min-width: 450px;
-    background-color: #fff;
+    background-color: var(--color-bright);
     border-radius: 15px;
 }
 
@@ -87,7 +87,7 @@
 }
 
 .table caption {
-    color: #fff;
+    color: var(--color-bright);
     text-align: center;
     padding: 0.5em;
     font-weight: bold;
@@ -123,7 +123,7 @@
 }
 
 .card__create-meeting {
-    /* background-color: #ffffff; */
+    /* background-color: var(--color-bright)fff; */
     width: 400px;
     max-width: 400px;
     padding: 1.5em;
@@ -147,7 +147,7 @@
 .form__title {
     margin-top: 0;
     margin-bottom: 1.5rem;
-    color: #fff;
+    color: var(--color-bright);
     text-align: center;
     padding: 0.5em;
     font-weight: 500;
@@ -208,7 +208,7 @@
     -webkit-box-shadow: 0px 0px 11px -1px rgba(0,0,0,0.45);
     -moz-box-shadow: 0px 0px 11px -1px rgba(0,0,0,0.45);
     box-shadow: 0px 0px 11px -1px rgba(0,0,0,0.45);
-    background-color: #ffffff;
+    background-color: var(--color-bright);
 }
 
 .form__input--error {
@@ -235,7 +235,7 @@
     font-weight: bold;
     font-size: 1.1rem;
     margin-top: 1rem;
-    color: #ffffff;
+    color: var(--color-bright);
     border: none;
     border-radius: 30px;
     outline: none;
