correct some mistakes and add more deafult colours

--- a/src/css/default.css
+++ b/src/css/default.css
@@ -27,6 +27,7 @@ html {
     --color-rejected: #B23B3B;
     --color-rejected-bg: #FCDDEC;
     --color-bright: #fff;
+    --color-submit: #2699ab;
 }
 
 body {
