--- a/src/css/supervisor_meeting.css
+++ b/src/css/supervisor_meeting.css
@@ -35,7 +35,7 @@
     font-weight: 600;
 }
 
-.button-add .icon {
+.icon {
     margin-right: 10px;
 }
 
@@ -123,16 +123,11 @@
 }
 
 .card__create-meeting {
-    /* background-color: var(--color-bright)fff; */
     width: 400px;
     max-width: 400px;
     padding: 1.5em;
     border-radius: 30px;
-    /* display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column; */
-    margin: 2rem auto;
+    margin: 1rem auto;
 }
 
 .form__message, .form__text {
@@ -248,9 +243,25 @@
     flex-grow: 2;
 } */
 
-.form__button:hover {
+.form__button--create {
+    background-color: var(--color-submit);
+    color: var(--color-bright);
+}
+
+.form__button--clear {
+    background-color: var(--color-rejected-bg);
+    color: var(--color-rejected);
+}
+
+.form__button--create:hover {
     background-color: var(--color-main-lighter);
 }
+
+.form__button--clear:hover {
+    background-color: var(--color-rejected);
+    color: var(--color-rejected-bg);
+}
+
 
 .form__button:active {
     transform: scale(0.98);
