worked on both users' goals page

--- a/src/css/default.css
+++ b/src/css/default.css
@@ -29,6 +29,7 @@ html {
     --color-rejected-bg: #FCDDEC;
     --color-bright: #fff;
     --color-submit: #2699ab;
+    --color-card: #f2f2f2;
 }
 
 body {
