--- a/src/css/default.css
+++ b/src/css/default.css
@@ -27,7 +27,7 @@ html {
     --color-accepted-bg: #EFFBF7;
     --color-rejected: #B23B3B;
     --color-rejected-bg: #FCDDEC;
-    --color-bright: #fff;
+    --color-white: #fff;
     --color-submit: #2699ab;
     --color-card: #f2f2f2;
 }
