--- a/src/css/student_assessment.css
+++ b/src/css/student_assessment.css
@@ -1,7 +1,3 @@
-body {
-    /* display: flex; */
-}
-
 .container__content {
     margin-left: 300px;
     margin-right: 20px;
@@ -9,11 +5,7 @@ body {
     flex-direction: column;
 }
 
-h1, h2 {
-    color: var(--color-main);
-}
-
-.container__dashboard {
+.container__assessment {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -21,27 +13,27 @@ h1, h2 {
     gap: 1rem;
 }
 
-.container__card {
-    display: flex;
-    gap: 1rem;
-    flex-wrap: wrap;
+.content-title {
+    color: var(--color-main);
 }
 
-.card {
+.container__goals-list {
+    max-height: 550px;
     background-color: var(--color-white);
-    flex: 1 0 auto;
-    width: 200px;
-    height: 500px;
-    padding: 1em;
-    border-radius: 15px;
+    padding: 1.25em;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 8px;
+
 }
 
-.card__title {
+.title {
     color: var(--color-white);
     text-align: center;
     padding: 0.5em;
     font-weight: bold;
     background-color: var(--color-main-lighter);
-    font-size: 1.2em;
+    font-size: 1.1rem;
     border-radius: 10px;
 }
