--- a/src/css/student_project.css
+++ b/src/css/student_project.css
@@ -25,7 +25,7 @@
 
 .button {
     color: var(--color-main);
-    background-color: var(--color-bright);
+    background-color: var(--color-white);
     padding: 0.9em 1.2em;
     outline: none;
     border-radius: 30px;
@@ -41,13 +41,13 @@
 }
 
 .button-add {
-    color: var(--color-bright);
+    color: var(--color-white);
     background-color: var(--color-main);
 }
 
 .button:hover {
     background-color: var(--color-main-lighter);
-    color: var(--color-bright);
+    color: var(--color-white);
 }
 
 .button:active {
@@ -65,7 +65,7 @@
 .card {
     width: 100%;
     min-width: 450px;
-    background-color: var(--color-bright);
+    background-color: var(--color-white);
     border-radius: 15px;
 }
 
@@ -82,7 +82,7 @@
 }
 
 .table caption {
-    color: var(--color-bright);
+    color: var(--color-white);
     text-align: center;
     padding: 0.5em;
     font-weight: bold;
@@ -169,12 +169,12 @@
 
 .button-card--upload {
     background-color: var(--color-submit);
-    color: var(--color-bright);
+    color: var(--color-white);
 }
 
 .button-card--remove {
     background-color: var(--color-error);
-    color: var(--color-bright);
+    color: var(--color-white);
 }
 
 .button-card--upload:hover {
