--- a/src/css/supervisor_goals.css
+++ b/src/css/supervisor_goals.css
@@ -20,7 +20,7 @@
 
 .button {
     color: var(--color-main);
-    background-color: var(--color-bright);
+    background-color: var(--color-white);
     padding: 0.9em 1.2em;
     outline: none;
     border-radius: 30px;
@@ -35,13 +35,13 @@
 }
 
 .button-add {
-    color: var(--color-bright);
+    color: var(--color-white);
     background-color: var(--color-main);
 }
 
 .button:hover {
     background-color: var(--color-main-lighter);
-    color: var(--color-bright);
+    color: var(--color-white);
 }
 
 .button:active {
@@ -91,7 +91,7 @@
     max-height: 480px;
     display: flex;
     flex-direction: column;
-    background-color: var(--color-bright);
+    background-color: var(--color-white);
     padding: 0.8em;
     gap: 1rem;
     flex: 2 0 auto;
@@ -121,7 +121,7 @@
 }
 
 .goals-list__header, .table caption {
-    color: var(--color-bright);
+    color: var(--color-white);
     text-align: center;
     padding: 0.5em;
     font-weight: bold;
@@ -132,7 +132,7 @@
 
 .container__progress {
     padding: 0.8em;
-    background-color: var(--color-bright);
+    background-color: var(--color-white);
     flex: 1 0 auto;
     border-radius: 8px;
 }
@@ -168,7 +168,7 @@
     padding: 1.5em;
     border-radius: 30px;
     margin: 1rem auto;
-    background-color: var(--color-bright);
+    background-color: var(--color-white);
 }
 
 .form__message, .form__text {
@@ -183,7 +183,7 @@
 .form__title {
     margin-top: 0;
     margin-bottom: 1.5rem;
-    color: var(--color-bright);
+    color: var(--color-white);
     text-align: center;
     padding: 0.5em;
     font-weight: 500;
@@ -244,7 +244,7 @@
     -webkit-box-shadow: 0px 0px 11px -1px rgba(0,0,0,0.45);
     -moz-box-shadow: 0px 0px 11px -1px rgba(0,0,0,0.45);
     box-shadow: 0px 0px 11px -1px rgba(0,0,0,0.45);
-    background-color: var(--color-bright);
+    background-color: var(--color-white);
 }
 
 .form__input--error {
@@ -271,7 +271,7 @@
     font-weight: bold;
     font-size: 1.1rem;
     margin-top: 1rem;
-    color: var(--color-bright);
+    color: var(--color-white);
     border: none;
     border-radius: 30px;
     outline: none;
@@ -286,7 +286,7 @@
 
 .form__button--create {
     background-color: var(--color-submit);
-    color: var(--color-bright);
+    color: var(--color-white);
 }
 
 .form__button--clear {
