--- a/src/css/supervisor_meeting.css
+++ b/src/css/supervisor_meeting.css
@@ -25,7 +25,7 @@
 
 .button {
     color: var(--color-main);
-    background-color: var(--color-bright);
+    background-color: var(--color-white);
     padding: 0.9em 1.2em;
     outline: none;
     border-radius: 30px;
@@ -40,13 +40,13 @@
 }
 
 .button-add {
-    color: var(--color-bright);
+    color: var(--color-white);
     background-color: var(--color-main);
 }
 
 .button:hover {
     background-color: var(--color-main-lighter);
-    color: var(--color-bright);
+    color: var(--color-white);
 }
 
 .button:active {
@@ -70,7 +70,7 @@
 .card {
     width: 100%;
     min-width: 450px;
-    background-color: var(--color-bright);
+    background-color: var(--color-white);
     border-radius: 15px;
 }
 
@@ -87,7 +87,7 @@
 }
 
 .table caption {
-    color: var(--color-bright);
+    color: var(--color-white);
     text-align: center;
     padding: 0.5em;
     font-weight: bold;
@@ -142,7 +142,7 @@
 .form__title {
     margin-top: 0;
     margin-bottom: 1.5rem;
-    color: var(--color-bright);
+    color: var(--color-white);
     text-align: center;
     padding: 0.5em;
     font-weight: 500;
@@ -203,7 +203,7 @@
     -webkit-box-shadow: 0px 0px 11px -1px rgba(0,0,0,0.45);
     -moz-box-shadow: 0px 0px 11px -1px rgba(0,0,0,0.45);
     box-shadow: 0px 0px 11px -1px rgba(0,0,0,0.45);
-    background-color: var(--color-bright);
+    background-color: var(--color-white);
 }
 
 .form__input--error {
@@ -230,7 +230,7 @@
     font-weight: bold;
     font-size: 1.1rem;
     margin-top: 1rem;
-    color: var(--color-bright);
+    color: var(--color-white);
     border: none;
     border-radius: 30px;
     outline: none;
@@ -245,7 +245,7 @@
 
 .form__button--create {
     background-color: var(--color-submit);
-    color: var(--color-bright);
+    color: var(--color-white);
 }
 
 .form__button--clear {
