--- a/src/css/supervisor_project.css
+++ b/src/css/supervisor_project.css
@@ -25,7 +25,7 @@
 
 .button {
     color: var(--color-main);
-    background-color: var(--color-bright);
+    background-color: var(--color-white);
     padding: 0.9em 1.2em;
     outline: none;
     border-radius: 30px;
@@ -40,13 +40,13 @@
 }
 
 .button-add {
-    color: var(--color-bright);
+    color: var(--color-white);
     background-color: var(--color-main);
 }
 
 .button:hover {
     background-color: var(--color-main-lighter);
-    color: var(--color-bright);
+    color: var(--color-white);
 }
 
 .button:active {
@@ -64,7 +64,7 @@
 .card {
     width: 100%;
     min-width: 450px;
-    background-color: var(--color-bright);
+    background-color: var(--color-white);
     border-radius: 15px;
 }
 
@@ -81,7 +81,7 @@
 }
 
 .table caption {
-    color: var(--color-bright);
+    color: var(--color-white);
     text-align: center;
     padding: 0.5em;
     font-weight: bold;
@@ -203,7 +203,7 @@
 
 .button-card {
     background-color: var(--color-main);
-    color: var(--color-bright);
+    color: var(--color-white);
 }
 
 .button-card:hover {
