--- a/src/css/supervisor_meeting.css
+++ b/src/css/supervisor_meeting.css
@@ -72,7 +72,32 @@
     min-width: 450px;
     background-color: var(--color-white);
     border-radius: 15px;
+    padding: 1.2em;
 }
+
+.card__past {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.card__upcoming {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.title {
+    width: 100%;
+    color: var(--color-white);
+    text-align: center;
+    padding: 0.5em;
+    font-weight: bold;
+    background-color: var(--color-main-lighter);
+    font-size: 1.2em;
+    border-radius: 10px;
+}
+
 
 .hidden {
     display: none;
@@ -97,21 +122,22 @@
 }
 
 .table  td,
-.table th {
+.table tr , .table th {
     text-align: left;
     padding: 0.65rem;
+    border-bottom: 1px solid var(--color-main-lighter);
 }
 
-.table-edit-button {
-    background-color: none;
-    border: none;
-    outline: none;
-    padding: 0.4em;
-    margin-left: 0.5rem;
-    margin-right: 0.5em;
-    cursor: pointer;
+.table  td,
+.table tr , .table th {
+    text-align: left;
+    padding: 0.65rem;
+    border-bottom: 1px solid var(--color-main-lighter);
 }
 
+.table th {
+    background-color: var(--color-card);
+}
 /* /////////////////////////////// */
 /* /////////  Create Meeting //////// */
 /* ///////////////////////////// */
