--- a/src/css/supervisor_goals.css
+++ b/src/css/supervisor_goals.css
@@ -15,6 +15,7 @@
 
 .wrapper__button {
     display: flex;
+    justify-content: space-between;
     gap: 1rem;
 }
 
@@ -73,8 +74,8 @@
 .card_detail {
     width: 95%;
     font-size: 0.9rem;
-    position: relative;
-    left: 33px;
+    /* position: relative;
+    left: 33px; */
 }
 
 .hidden {
