--- a/src/css/supervisor_assessment.css
+++ b/src/css/supervisor_assessment.css
@@ -17,6 +17,16 @@
     color: var(--color-main);
 }
 
+.title {
+    color: var(--color-white);
+    text-align: center;
+    padding: 0.5em;
+    font-weight: bold;
+    background-color: var(--color-main-lighter);
+    font-size: 1.2em;
+    border-radius: 10px;
+}
+
 .button {
     color: var(--color-main);
     background-color: var(--color-white);
@@ -47,6 +57,9 @@
     border-radius: 15px;
     flex: 1 auto;
     max-height: 550px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .table {
@@ -68,15 +81,15 @@
 }
 
 .table  td,
-.table th {
+.table tr , .table th {
     text-align: left;
     padding: 0.65rem;
+    border-bottom: 1px solid var(--color-main-lighter);
 }
 
-th,tr {
-    border-bottom: 1px solid var(--color-card);
+.table th {
+    background-color: var(--color-card);
 }
-
 
 .table-edit-button {
     background-color: none;
@@ -134,6 +147,12 @@ th,tr {
 /* .container__evaluation-table  {
 
 } */
+
+.total {
+    font-weight: 600;
+    text-align: center;
+    background-color: var(--color-card);
+}
 
 .container__button {
     display: flex;
