--- a/src/css/supervisor_goals.css
+++ b/src/css/supervisor_goals.css
@@ -89,13 +89,15 @@
 }
 
 .goals-list {
+    width: 350px;
+    min-width: 350px;
     max-height: 480px;
     display: flex;
     flex-direction: column;
     background-color: var(--color-white);
     padding: 0.8em;
     gap: 1rem;
-    flex: 2 0 auto;
+    flex: 1 0 auto;
     border-radius: 8px;
 }
 
@@ -132,15 +134,35 @@
 }
 
 .container__progress {
+    width: 350px;
+    min-width: 410px;
     padding: 0.8em;
     background-color: var(--color-white);
     flex: 1 0 auto;
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.title {
+    color: var(--color-white);
+    text-align: center;
+    padding: 0.5em;
+    font-weight: bold;
+    background-color: var(--color-main-lighter);
+    font-size: 1.2em;
+    border-radius: 10px;
+}
+
+.container__table {
+
 }
 
 .table {
-    margin: 0.5em auto;
-    width: 95%;
+    table-layout: auto;
+    /* margin: 0.5em auto; */
+    width: 100%;
     font-size: 0.85em;
     border-collapse: collapse;
     border-spacing: 0;
@@ -152,6 +174,32 @@
     padding: 0.65rem;
     border-bottom: 1px solid var(--color-card);
 }
+
+.container__progress-button {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.table-edit-button {
+    width: 25%;
+    background-color: #2db975;
+    color: white;
+    border: none;
+    outline: none;
+    padding: 0.4em 0.6em;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.table-edit-button:hover {
+    background-color: #2fc57c;
+    transform: scale(0.98);
+}
+
+/* td, th {
+    width:0.1%;
+    white-space: nowrap;
+} */
 
 
 /* ///////////////////////////////////  /
