--- a/src/css/default.css
+++ b/src/css/default.css
@@ -37,3 +37,32 @@ body {
     background-color: var(--color-accent);
     min-height: 100vh;
 }
+
+.container__table {
+    overflow-x: auto;
+    overflow-y: auto;
+}
+
+.container__table::-webkit-scrollbar {
+    width: 0.3rem;
+    height: 0.3rem;
+}
+ 
+.container__table::-webkit-scrollbar-track {
+    background-color: #e4e4e4;
+    border-radius: 100px;
+}
+ 
+.container__table::-webkit-scrollbar-thumb {
+    background-color: var(--color-main);
+    border-radius: 100px;
+}
+
+
+.table {
+    width: 100%;
+    font-size: 0.85em;
+    border-collapse: collapse;
+    border-spacing: 0;
+    white-space: nowrap;
+}
