--- a/src/css/supervisor_meeting.css
+++ b/src/css/supervisor_meeting.css
@@ -16,6 +16,8 @@
 .wrapper__button {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .button--left-group {
@@ -33,6 +35,7 @@
     cursor: pointer;
     font-size: 0.9rem;
     font-weight: 600;
+    white-space: nowrap;
 }
 
 .icon {
@@ -69,7 +72,7 @@
 
 .card {
     width: 100%;
-    min-width: 450px;
+    /* min-width: 450px; */
     background-color: var(--color-white);
     border-radius: 15px;
     padding: 1.2em;
@@ -103,9 +106,14 @@
     display: none;
 }
 
+
+.container__table {
+    overflow-x: auto;
+}
+
 .table {
     margin: 0.5em auto;
-    width: 95%;
+    width: 100%;
     font-size: 0.85em;
     border-collapse: collapse;
     border-spacing: 0;
