--- a/src/css/student_goals.css
+++ b/src/css/student_goals.css
@@ -18,7 +18,7 @@
 }
 
 .container__goals-list {
-    max-height: 550px;
+    height: 550px;
     background-color: var(--color-white);
     padding: 1.25em;
     display: flex;
