--- a/src/css/supervisor_assessment.css
+++ b/src/css/supervisor_assessment.css
@@ -69,6 +69,9 @@
     padding: 0.65rem;
     border-bottom: 1px solid var(--color-main-lighter);
 }
+.table {
+    white-space: unset;
+}
 
 .table th {
     background-color: var(--color-card);
@@ -147,6 +150,7 @@
 
 .button__left-group {
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
 }
 
