resize progress bar

--- a/src/css/supervisor_goals.css
+++ b/src/css/supervisor_goals.css
@@ -194,6 +194,10 @@
    ////////////// Add goal //////////  /
    ///////////////////////////////// */
 
+progress {
+    width: 60%;
+}
+
 .form {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     width: 100%;
